--- a/iMusic.Client/src/app/+acount/components/acount/acount.component.html
+++ b/iMusic.Client/src/app/+acount/components/acount/acount.component.html
@@ -174,6 +174,10 @@
 
   <div class="break-line "></div>
 
+  <div class="notification-singer"  *ngIf="user?.wantToBeSinger == false">
+    Your request has been approved. Now you have the role of a singer and can share your albums and songs.
+  </div>
+
   <section *ngIf="(user?.userRoles | checkRole: [applicationRole.UserRole]) && user?.wantToBeSinger == null" class="profile-info-section" >
     <button (click)="becomeSinger()" class="become-singer-button" mat-button>
       I'm singer. Sent request for become singer?
