--- a/iMusic.Client/src/app/+acount/components/acount/acount.component.scss
+++ b/iMusic.Client/src/app/+acount/components/acount/acount.component.scss
@@ -163,6 +163,14 @@
     .default-button:disabled {
       color: $color-white;
     }
+    .notification-singer{
+      background-color: rgb(250, 139, 139);
+      font-weight: 500;
+      font-size: 1em;
+      border-radius: 10px;
+      padding: 2em 1em;
+      margin: 1em;
+    }
   }
 
   
