--- a/iMusic.Client/src/app/core/components/sidebar/sidebar.component.scss
+++ b/iMusic.Client/src/app/core/components/sidebar/sidebar.component.scss
@@ -56,6 +56,16 @@ mat-icon{
     height: 90vh;
     padding: 24px 12px;
 
+    .is-user-requests{
+      border-radius: 5px;
+      background: rgb(0, 110, 255);
+      width: 10px;
+      height: 10px;
+      position: absolute;
+      top: 5px;
+      left: 5px;
+    }
+
     .sidebar-status {
       margin-bottom: 24px;
       width: 100%;
@@ -69,6 +79,7 @@ mat-icon{
         mat-icon{
           margin-right: 10px;
         }
+        position: relative;
         display: flex;
         align-items: center;
         width: 100%;
